[gd_scene load_steps=16 format=3 uid="uid://dp4t0yowo5bk7"]

[ext_resource type="Texture2D" uid="uid://csfvchgc60yor" path="res://Assets/Tiles/tile_0044.png" id="1_dbdyt"]
[ext_resource type="Script" path="res://Script/UI.gd" id="1_n20ai"]
[ext_resource type="Texture2D" uid="uid://dnkcbfuq6syut" path="res://Assets/Tiles/tile_0151.png" id="3_8ycqw"]
[ext_resource type="Texture2D" uid="uid://bcu8neutq4tp4" path="res://Assets/Tiles/tile_0067.png" id="3_mhi7n"]
[ext_resource type="FontFile" uid="uid://dat0ka8ygoodr" path="res://Assets/Font/LilitaOne-Regular.ttf" id="4_0a34x"]
[ext_resource type="Texture2D" uid="uid://ccl37cqqr5v80" path="res://Assets/UI/Sprites/line-dark/lineDark42.png" id="7_6pvpd"]
[ext_resource type="Texture2D" uid="uid://c0qlk7750pc7e" path="res://Assets/UI/Sprites/line-dark/lineDark15.png" id="7_i1ht3"]
[ext_resource type="Texture2D" uid="uid://17bdij5svie5" path="res://Assets/UI/Sprites/line-dark/lineDark43.png" id="8_i8vbb"]
[ext_resource type="Texture2D" uid="uid://dfu450tcngc6j" path="res://Assets/UI/Sprites/flat-light/flatLight29.png" id="8_jn17p"]
[ext_resource type="AudioStream" uid="uid://d207bjqpmxw3k" path="res://Assets/audio/Glug.mp3" id="9_kepbo"]

[sub_resource type="LabelSettings" id="LabelSettings_s0jtd"]
font = ExtResource("4_0a34x")
font_size = 64
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_2fjvb"]
font = ExtResource("4_0a34x")
font_color = Color(0.964706, 0.964706, 0.964706, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7prqs"]
font = ExtResource("4_0a34x")
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventAction" id="InputEventAction_ipqgy"]
action = &"Settings"

[sub_resource type="Shortcut" id="Shortcut_te7g3"]
events = [SubResource("InputEventAction_ipqgy")]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n20ai")

[node name="Love 3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 8.0
offset_right = 490.0
offset_bottom = 28.0
texture = ExtResource("1_dbdyt")

[node name="Love 2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 8.0
offset_right = 520.0
offset_bottom = 28.0
texture = ExtResource("1_dbdyt")

[node name="Love 1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 8.0
offset_right = 550.0
offset_bottom = 28.0
texture = ExtResource("1_dbdyt")

[node name="Node_Diamond" type="Node" parent="."]

[node name="Diamond" type="TextureRect" parent="Node_Diamond"]
offset_left = 32.0
offset_top = 54.0
offset_right = 62.0
offset_bottom = 84.0
scale = Vector2(0.776017, 0.843523)
texture = ExtResource("3_mhi7n")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Node_Diamond"]
offset_left = 57.0
offset_top = 60.0
offset_right = 146.0
offset_bottom = 148.0
scale = Vector2(0.209957, 0.170129)
label_settings = SubResource("LabelSettings_s0jtd")

[node name="Node _ Coins" type="Node" parent="."]

[node name="Coins" type="TextureRect" parent="Node _ Coins"]
offset_left = 29.0
offset_top = 16.0
offset_right = 59.0
offset_bottom = 46.0
texture = ExtResource("3_8ycqw")

[node name="Label" type="Label" parent="Node _ Coins"]
offset_left = 57.0
offset_top = 26.0
offset_right = 143.0
offset_bottom = 101.0
scale = Vector2(0.209957, 0.170129)
label_settings = SubResource("LabelSettings_s0jtd")

[node name="Settings" type="Node2D" parent="."]

[node name="Panel_stuffs" type="Node2D" parent="Settings"]
visible = false

[node name="Shop_label" type="Label" parent="Settings/Panel_stuffs"]
offset_left = 211.0
offset_top = 113.0
offset_right = 251.0
offset_bottom = 136.0
text = "Shop"
label_settings = SubResource("LabelSettings_2fjvb")
uppercase = true

[node name="Exit" type="TextureButton" parent="Settings/Panel_stuffs"]
offset_left = 338.0
offset_top = 140.0
offset_right = 386.0
offset_bottom = 188.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("7_6pvpd")
stretch_mode = 0

[node name="Exit_label" type="Label" parent="Settings/Panel_stuffs"]
offset_left = 344.0
offset_top = 111.0
offset_right = 384.0
offset_bottom = 134.0
text = "exit"
label_settings = SubResource("LabelSettings_7prqs")
uppercase = true

[node name="Level" type="TextureButton" parent="Settings/Panel_stuffs"]
offset_left = 464.125
offset_top = 140.0
offset_right = 544.126
offset_bottom = 220.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("7_i1ht3")
stretch_mode = 0

[node name="Level_label" type="Label" parent="Settings/Panel_stuffs"]
offset_left = 468.0
offset_top = 111.0
offset_right = 509.0
offset_bottom = 134.0
text = "level
"
label_settings = SubResource("LabelSettings_7prqs")
uppercase = true

[node name="Main_menu" type="TextureButton" parent="Settings/Panel_stuffs"]
offset_left = 83.65
offset_top = 140.0
offset_right = 163.651
offset_bottom = 220.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("7_i1ht3")
stretch_mode = 0

[node name="Main_label" type="Label" parent="Settings/Panel_stuffs"]
offset_left = 65.0
offset_top = 111.0
offset_right = 154.0
offset_bottom = 134.0
text = "Main Menu
"
label_settings = SubResource("LabelSettings_7prqs")
uppercase = true

[node name="Character_Shop" type="TextureButton" parent="Settings/Panel_stuffs"]
offset_left = 207.0
offset_top = 140.0
offset_right = 287.0
offset_bottom = 220.0
scale = Vector2(0.6, 0.61)
texture_normal = ExtResource("8_i8vbb")
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="Settings"]
offset_left = 518.0
offset_top = 37.0
offset_right = 566.0
offset_bottom = 85.0
scale = Vector2(0.538825, 0.499652)
shortcut = SubResource("Shortcut_te7g3")
texture_normal = ExtResource("8_jn17p")
stretch_mode = 0

[node name="Button_pressed" type="AudioStreamPlayer2D" parent="."]
position = Vector2(187, 140)
stream = ExtResource("9_kepbo")

[connection signal="pressed" from="Settings/Panel_stuffs/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/Panel_stuffs/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="Settings/Panel_stuffs/Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Settings/Panel_stuffs/Character_Shop" to="." method="_on_character_shop_pressed"]
[connection signal="pressed" from="Settings/TextureButton" to="." method="_on_texture_button_pressed"]
